# docling-ocr-qwen3vl

./: .gitignore  README.md  RECIPES.md  pyproject.toml  report.md
scripts/: gpu_test.py  smoke_test.py  test_docling_serve_default.py  test_docling_serve_hybrid.py  test_docling_serve_hybrid_granite.py  test_docling_serve_hybrid_pic.py  test_docling_serve_hybrid_smolvlm.py  test_docling_serve_qwen.py  test_picture_description.py
src/docling_ocr_qwen3vl/: __init__.py  _model_registry.py  _vlm_jsonformer.py  code_formula_model.py  layout_model.py  model.py  options.py  picture_classifier_model.py  picture_description_model.py  plugins.py  presets.py  prompts.py  qwen_runner.py  table_structure_model.py
tests/: conftest.py  test_parsing.py
